--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "bash deploy.sh",
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
   },
